@@ -52,7 +52,6 @@ extern const vf_info_t vf_info_scale;
 extern const vf_info_t vf_info_format;
 extern const vf_info_t vf_info_noformat;
 extern const vf_info_t vf_info_flip;
-extern const vf_info_t vf_info_rgb2bgr;
 extern const vf_info_t vf_info_rotate;
 extern const vf_info_t vf_info_mirror;
 extern const vf_info_t vf_info_palette;
@@ -137,7 +136,6 @@ static const vf_info_t* const filter_list[]={
     &vf_info_format,
     &vf_info_noformat,
     &vf_info_flip,
-    &vf_info_rgb2bgr,
     &vf_info_rotate,
     &vf_info_mirror,
     &vf_info_palette,
